# project_shopflow-afek

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  SKILL.md  clean_notebooks.py  dockerfile  generate_notebooks.py  main.py  myst.yml  pyproject.toml  sandbox.ipynb  workspace.dockerfile
.claude/commands/: document-learnings.md  plan-course.md
.cursor/rules/: concept-reuse.mdc  content-format.mdc  course-materials.mdc  lab-environment.mdc  myst-config.mdc  one-topic-per-file.mdc  project-overview.mdc  self-documentation.mdc
.devcontainer/: devcontainer.json
docker/mssql/: readme.md
labs/base/: Dockerfile  compose.yml  init.sh  pyproject.toml
labs/distributed/: compose.yml  pyproject.toml
labs/neo4j/: compose.yml  pyproject.toml
labs/neo4j-cluster/: compose.yml  init.sh  pyproject.toml
labs/nosql/: compose.yml  pyproject.toml
labs/orm/: compose.yml  pyproject.toml
labs/redis/: compose.yml  pyproject.toml
labs/redis-cluster/: compose.yml  init.sh  pyproject.toml
labs/redis-sentinel/: Dockerfile.sentinel  compose.yml  pyproject.toml  sentinel.conf
labs/replica-set/: compose.yml  init.sh  pyproject.toml
materials/: welcome.md
materials/python/02-python-essentials/demo-app/file-etl/: README.md  pyproject.toml
materials/python/02-python-essentials/demo-app/file-etl/data/: customers.csv  orders.json
materials/python/02-python-essentials/demo-app/file-etl/src/file_etl/: __init__.py  loader.py  main.py  models.py  readers.py
scaffold/: docker-compose.yml  pyproject.toml
scripts/: add-kernelspec.py
(+193 files in other folders)
