[project]
name = "john-bryce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.3",
    "ipykernel>=7.1.0",
    "ipytest>=0.14.2",
    "jupyterlab>=4.5.3",
    "jupytext>=1.19.1",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pymongo>=4.16.0",
    "pyodbc>=5.3.0",
    "pytest>=9.0.2",
    "sqlalchemy>=2.0.46",
]

[tool.jupytext]
formats = "md,ipynb"
notebook_metadata_filter = "-all"
cell_metadata_filter = "-all"
